--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -36,11 +36,16 @@
 .avatar {
   height: 200px;
   width: 200px;
+  min-height: 200px;
+  min-width: 200px;
+
   border-radius: 100%;
   box-shadow: 0 0 10px rgba(black, .3);
   @include r(920) {
     width: 160px;
     height: 160px;
+    min-height: 160px;
+    min-width: 160px;
   }
   @include r(600) {
     border-radius: 100%;
@@ -48,6 +53,8 @@
   @include r(420) {
     width: 140px;
     height: 140px;
+    min-height: 140px;
+    min-width: 140px;
   }
 }
 
@@ -85,12 +92,22 @@
   margin-top: 10px;
   text-align: center;
 
-  input {
-    border: 1px solid #edeef0;
-    border-radius: 5px;
-    width: 100%;
-    padding: 5px 10px;
-    margin-top: 5px;
+}
+
+.input {
+  border: 1px solid #edeef0;
+  border-radius: 5px;
+  width: 100%;
+  padding: 5px 10px;
+  margin-top: 5px;
+}
+
+@include nignt {
+  .input {
+    background: $nightLightGrey;
+    box-shadow: 0 1px 0 0 $nightLightGrey, 0 0 0 1px $nightLightGrey;
+    color: white;
+    border: 2px solid #313131;
   }
 }
 
