--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,15 +1,74 @@
-form{
+@import "../../assets/scss/resources";
+
+form {
   display: flex;
   flex-direction: column;
 }
-.rememberWrap{
+
+.rememberWrap {
   display: flex;
   flex-direction: row;
 }
-.remember{
--webkit-appearance: checkbox;
+
+.remember {
+  -webkit-appearance: checkbox;
   margin-right: 10px;
 }
-input{
+
+input {
+  width: 100%;
+  position: relative;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
+  padding: 15px;
+  display: flex;
+  justify-content: flex-start;
+  resize: none;
+  box-sizing: content-box;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 420px;
+  position: relative;
+  margin: calc(50vh - 200px) auto 0 auto;
+
+  .rememberWrap {
+    align-items: center;
+
+    & > div {
+      margin-bottom: 0;
+    }
+  }
+
+  button {
+    height: 40px;
+    margin-top: 0;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-right: 20px;
+  }
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.header {
+  font-size: 22px;
+  text-transform: uppercase;
+  font-weight: 700;
   margin-bottom: 10px;
+}
+
+@include nignt {
+  input {
+    background: $nightLightGrey;
+    box-shadow: 0 1px 0 0 $nightLightGrey, 0 0 0 1px $nightLightGrey;
+  }
 }
