--- a/src/components/common/FormsFields/formFields.module.scss
+++ b/src/components/common/FormsFields/formFields.module.scss
@@ -6,6 +6,8 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  margin-bottom: 15px;
+  position: relative;
 
   textarea {
     width: 100%;
@@ -78,27 +80,33 @@
 
   span {
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #c70b0b;
     color: white;
     font-weight: 600;
     font-size: 14px;
     padding: 5px 10px;
     border-radius: 3px;
-    transform: translateX(calc(-100% - 10px));
+    max-height: calc(100% - 20px);
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
     opacity: 0;
     visibility: hidden;
     transition: opacity $t;
 
-    &:before {
-      content: "";
-      position: absolute;
-      height: 10px;
-      width: 10px;
-      background: #c70b0b;
-      transform: rotate(45deg);
-      right: -3px;
-      top: calc(50% - 5px);
-    }
+    //&:before {
+    //  content: "";
+    //  position: absolute;
+    //  height: 10px;
+    //  width: 10px;
+    //  background: #c70b0b;
+    //  transform: rotate(45deg);
+    //  right: -3px;
+    //  top: calc(50% - 5px);
+    //}
   }
 
   &.error {
@@ -116,8 +124,83 @@
 }
 
 
-.errorField{
+.errorField {
   background: red;
   color: white;
   font-weight: 600;
+}
+
+
+.textareaWrapper {
+  display: flex;
+
+  input[type="checkbox"] {
+    padding: 0;
+    height: initial;
+    width: initial;
+    margin-bottom: 0;
+    display: none;
+    cursor: pointer;
+
+    &:checked + label:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 2px;
+      left: 5px;
+      transform: rotate(45deg);
+      width: 4px;
+      height: 6px;
+      border: solid $nightBlack;
+      border-width: 0 2px 2px 0;
+    }
+  }
+
+  label {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    font-size: 14px;
+    line-height: 1;
+    font-weight: 500;
+
+    &:before {
+      content: '';
+      -webkit-appearance: none;
+      position: relative;
+      background: #fff;
+      border-radius: 4px;
+      box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
+      height: 15px;
+      width: 15px;
+      display: flex;
+      justify-content: flex-start;
+      resize: none;
+      box-sizing: content-box;
+      margin-right: 8px;
+    }
+  }
+}
+
+@include nignt {
+  .textareaWrapper {
+    input[type="checkbox"] {
+      &:checked + label:after {
+        border-color: #fff;
+      }
+    }
+
+    label {
+      &:before {
+        background: $nightLightGrey;
+        box-shadow: 0 1px 0 0 $nightLightGrey, 0 0 0 1px $nightLightGrey;
+      }
+    }
+
+    button {
+      background-color: $nightOrange;
+    }
+  }
 }
